# focus-guard

./: README.md  SESSION_LOG.md  package-lock.json  package.json
electron/: main.js  preload.js
public/: index.html
service/: CMakeLists.txt  focus_guard_service.cpp
src/: App.js  index.css
src/components/: Dashboard.js  Setup.js  TitleBar.js  Toast.js
